@@ -132,6 +132,7 @@ tests = [
     (2, './08-ssl-connect-no-auth-wrong-ca.py'),
     (2, './08-ssl-connect-no-auth.py'),
     (2, './08-ssl-connect-no-identity.py'),
+    (1, './08-ssl-hup-disconnect.py'),
     (2, './08-tls-psk-pub.py'),
     (3, './08-tls-psk-bridge.py'),
 
